fix zoom detection, overlay click and scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -237,8 +237,8 @@ body {
     @media screen and (max-width: 768px) {
       padding: 0;
       width: 100vw;
-      //height: calc(var(--vh, 1vh) * 100);
-      height: 100vh;
+      height: calc(var(--vh, 1vh) * 100);
+      //height: 100vh;
       border-radius: 0;
     }
 
